tests/expectations/compiler/core/algorithms/ecdsa.out
Error [ETYC0372005]: Unknown function `ECDSA::verify_keccak256_eth_raw`
    --> compiler-test:8:28
     |
   8 |             let a4: bool = ECDSA::verify_keccak256_eth_raw(one, two, three);
     |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown function `ECDSA::verify_keccak384_eth_raw`
    --> compiler-test:12:28
     |
  12 |             let a8: bool = ECDSA::verify_keccak384_eth_raw(one, two, three);
     |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown function `ECDSA::verify_keccak512_eth_raw`
    --> compiler-test:16:29
     |
  16 |             let a12: bool = ECDSA::verify_keccak512_eth_raw(one, two, three);
     |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown function `ECDSA::verify_sha3_256_eth_raw`
    --> compiler-test:20:29
     |
  20 |             let a16: bool = ECDSA::verify_sha3_256_eth_raw(one, two, three);
     |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown function `ECDSA::verify_sha3_384_eth_raw`
    --> compiler-test:24:29
     |
  24 |             let a20: bool = ECDSA::verify_sha3_384_eth_raw(one, two, three);
     |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown function `ECDSA::verify_sha3_512_eth_raw`
    --> compiler-test:28:29
     |
  28 |             let a24: bool = ECDSA::verify_sha3_512_eth_raw(one, two, three);
     |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
